Created HTML pages for Project Explorer

--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -24,13 +24,14 @@
 			<section>
 				<header><h2>Project 1</h2></header>
 				<ul>
-					<li>Created By:</li>
-					<li>Date Created:</li>
-					<li>Last Updated:</li>
+					<li>Created By: John Doe</li>
+					<li>Date Created: 00/00/0000</li>
+					<li>Last Updated: 00/00/0000</li>
 				</ul>
 			</section>
 			<section>
-				<form action="" name="editproject">
+				<header><h3>Edit Project</h3></header>
+				<form name="editProject">
 					<label for="name">Project Name:</label>
 					<input type="text" name="name" /><br /><br />
 					<label for="abstract">Project Abstract:</label>
