fix error on register page

--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -21,7 +21,7 @@
 			<a href="createproject.html">Submit</a>
 		</nav>
 		<main>
-			<h1>Sign Up</h1>
+			<h1>Signup</h1>
 			<form name="signUp">
 				<label for="firstName">First Name:</label>
 				<input type="text" name="firstName" />
@@ -53,7 +53,7 @@
 					<option value="Computer_Information_Systems">
 						Computer Information Systems
 					</option>
-					<option value="Computer Technology">Computer Technology</option>
+					<option value="Computer_Technology">Computer Technology</option>
 				</select>
 
 				<br /><br />
