fix option value in select for register page

--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -49,11 +49,11 @@
 
 				<label for="program">Program:</label>
 				<select name="program">
-					<option value="Computer_Science">Computer Science</option>
-					<option value="Computer_Information_Systems">
+					<option value="computer_science">computer science</option>
+					<option value="computer_information_systems">
 						Computer Information Systems
 					</option>
-					<option value="Computer_Technology">Computer Technology</option>
+					<option value="computer_technology">Computer Technology</option>
 				</select>
 
 				<br /><br />
