fix register page error

--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -49,7 +49,7 @@
 
 				<label for="program">Program:</label>
 				<select name="program">
-					<option value="computer_science">computer science</option>
+					<option value="computer_science">Computer Science</option>
 					<option value="computer_information_systems">
 						Computer Information Systems
 					</option>
