fix profile page error

--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -72,8 +72,8 @@
 			<section>
 				<header><h2>Change Password</h2></header>
 				<form name="changePassword">
-					<label for="password">Current Password:</label>
-					<input type="password" name="password" />
+					<label for="currentPassword">Current Password:</label>
+					<input type="password" name="currentPassword" />
 					<br /><br />
 					<label for="newPassword">New Password:</label>
 					<input type="password" name="newPassword" />
