fix search page error

--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -30,7 +30,7 @@
 						placeholder="Project, Name, Authors, Abstract, Tags"
 					/>
 					<br />
-					<label>Search by</label><br />
+					<label>Search By</label><br />
 					<select name="searchType">
 						<option value="Name">Name</option>
 						<option value="Abstract">Abstract</option>
