--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -47,15 +47,15 @@
 					<br /><br />
 					<label for="program">Program:</label>
 					<select name="program">
-						<option value="Computer_Science">Computer Science</option>
-						<option value="Computer_Information_Systems">
+						<option value="computer_science">Computer Science</option>
+						<option value="computer_information_systems">
 							Computer Information Systems
 						</option>
-						<option value="Computer Technology">Computer Technology</option>
+						<option value="computer technology">Computer Technology</option>
 					</select>
 					<br /><br />
 					<label for="graduationYear">Graduation Year:</label>
-					<select name="graduation_Year" id="graduationYear">
+					<select name="graduationYear" id="graduationYear">
 						<option value="2013">2013</option>
 						<option value="2014">2014</option>
 						<option value="2015">2015</option>
