--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -51,7 +51,7 @@
 						<option value="computer_information_systems">
 							Computer Information Systems
 						</option>
-						<option value="computer technology">Computer Technology</option>
+						<option value="computer_technology">Computer Technology</option>
 					</select>
 					<br /><br />
 					<label for="graduationYear">Graduation Year:</label>
