fix error on createproject page

--- a/app/public/project-explorer/createproject.html
+++ b/app/public/project-explorer/createproject.html
@@ -21,9 +21,9 @@
 		</nav>
 		<main>
 			<header><h3>Submit Project</h3></header>
-			<form action="" name="Submit Project">
+			<form name="Submit Project">
 				<label for="project_name">Project Name</label>
-				<input type="text" name="project_name" /><br /><br />
+				<input type="text" name="name" /><br /><br />
 				<label for="abstract">Project Abstract:</label>
 				<textarea type="textarea" name="abstract"></textarea>
 				<br /><br />
