fix error on viewproject page

--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -41,8 +41,8 @@
 					<input type="text" name="authors" /><br /><br />
 					<label for="tags">Tag(s):</label>
 					<input type="text" name="tags" /><br /><br />
-					<label for="projectfile">Upload File</label><br />
-					<input type="file" name="projectfile" /><br /><br />
+					<label for="projectFile">Upload File</label><br />
+					<input type="file" name="projectFile" /><br /><br />
 					<input type="submit" value="Submit" />
 				</form>
 			</section>
