--- a/app/public/project-explorer/viewproject.html
+++ b/app/public/project-explorer/viewproject.html
@@ -51,7 +51,7 @@
 				<ul>
 					<li>Authors: John Doe, Jane Doe</li>
 					<li>Tags: #Asphyxia, #GSW</li>
-					<li>Project Files: <a href="">File1</a>, <a href="">File2</a></li>
+					<li>Project Files: <a href="#">File1</a>, <a href="#">File2</a></li>
 				</ul>
 			</section>
 		</main>
